<resources>
    <string name="app_name">Shuffle Navi</string>
    <string name="title_activity_main">Shuffle Navi</string>
    <string name="hello_world" translatable="false">Hello world!</string>

    <string name="action_about" translatable="false">About</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="title_activity_about" translatable="false">About</string>
    <string name="about_version_title">Version</string>
    <string name="about_developer_title">Developer</string>

    <string name="about_developer" translatable="false">Ninton G.K.</string>

    <string name="about_sourcecode_title" translatable="false">SourceCode(GitHub)</string>
    <string name="about_sourcecode" translatable="false">https://github.com/ninton/ShuffleNavi</string>

    <string name="title_activity_random_deal_shuffle">Shuffle Navi</string>
    <string name="description_activity_random_deal_shuffle">The navigator application for a shuffle to make the realistic card.</string>

    <string name="title_activity_two_dices">Two Dices</string>

    <string name="stacked_count_unit_singular">card</string>
    <string name="stacked_count_unit_plural">cards</string>

    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="restart">Restart</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="finish">Finish</string>

    <string name="title_speed">Speed</string>
    <string name="title_counter">Counter</string>
    <string name="title_num_cards">Cards</string>
    <string name="title_num_packets">Packets</string>

    <string name="icon_next" translatable="false">&gt;</string>
    <string name="icon_plus" translatable="false">+</string>
    <string name="icon_minus" translatable="false">-</string>

    <string name="icon_debug" translatable="false">DEBUG</string>

    <string name="shuffle_pulled_count" translatable="false">25</string>
    <string name="shuffle_rest_count" translatable="false">52</string>
    <string name="txt_shuffle_num_cards" translatable="false">3</string>
    <string name="txt_shuffle_num_packets" translatable="false">3</string>

    <string name="packet_name" translatable="false">1</string>
    <string name="stacked_count" translatable="false">23</string>
</resources>
